--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.9.2",
     "next": "13.1.6",
     "postcss-preset-env": "^8.0.1",
+    "primereact": "^9.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
